# py-symcom_api

./: .gitignore  README.md  TODOS.md  pyproject.toml
app/: main.py
app/services/: derivatives.py  integrals.py
symcom/: latex.py
symcom/algebra/: prime_factors.py
tests/algebra/: prime_factors_test.py
