[tool.poetry]
name = "symcom"
version = "0.1.0"
description = ""
authors = ["John Faucett <jwaterfaucett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
sympy = "^1.7"
antlr4-python3-runtime = "^4.9"
uvicorn = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
